# matlab-figure-ci

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  mfigci.example.yml  mfigci.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adoption_report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  issue-triage.yml  package.yml
docs/: README.md  README.zh-CN.md  adoption-playbook.md  adoption-report-matlab-plotting-skill.md  adoption-report-matlab-scientific-figures.md  evidence-packet-template.md  issue-triage-report.md  json-report.md  matlab-ci-guide.md  openai-codex-maintainer-workflow.md  pr-comment-template.md  pypi-release-checklist.md  pypi-release-checklist.zh-CN.md  release-artifacts.md  release-cadence.md  rule-design.md  rule-design.zh-CN.md  v2-compatibility.md  version-plan.md
examples/configs/: README.md  minimal-static-scan.yml  png-svg-gallery.yml  png-svg-pdf-gallery.yml  strict-release-gate.yml
examples/reports/: submission-check-example.md  submission-check-template.zh-CN.md
scripts/: check_markdown_links.py  check_pypi_name.py  check_workflows.py
src/matlab_figure_ci/: __init__.py  cli.py  config.py  gallery.py  matlab.py  release.py  report.py  result.py  scanners.py
tests/: test_cli.py  test_config.py  test_docs_inventory.py  test_example_configs.py  test_gallery.py  test_github_templates.py  test_markdown_links.py  test_package_metadata.py  test_release_preflight.py  test_report.py  test_result_models.py  test_scan_extensions.py  test_scan_privacy.py  test_scan_sources.py  test_user_presets.py  test_workflows.py
tests/fixtures/clean_project/: README.md
tests/fixtures/risky_project/: README.md
