[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matlab-figure-ci"
version = "0.2.0"
description = "A CI/CLI quality gate for MATLAB scientific figure repositories."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Weizhou Chen"}
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["matlab", "figures", "ci", "research", "provenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[project.scripts]
mfigci = "matlab_figure_ci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
