[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "matlab-figure-ci"
version = "2.4.1"
description = "A CI/CLI quality gate for MATLAB scientific figure repositories."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Weizhou Chen"}
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["matlab", "figures", "ci", "research", "provenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Kkkakania/matlab-figure-ci"
Repository = "https://github.com/Kkkakania/matlab-figure-ci"
Issues = "https://github.com/Kkkakania/matlab-figure-ci/issues"
Changelog = "https://github.com/Kkkakania/matlab-figure-ci/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]
build = [
  "build>=1.2",
  "twine>=5.0"
]

[project.scripts]
mfigci = "matlab_figure_ci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
